--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,7 @@ a:hover {
 }
 
 .title-doc-link {
+    color: black;
     display: inline-block;
     position: fixed;
     right: 20px;
@@ -493,6 +494,7 @@ a:hover {
     z-index: 998;
     opacity: 0.5;
     border: none;
+    border-radius: 4px;
     background: none;
     padding: 0px;
 }
@@ -830,33 +832,33 @@ a:hover {
     }
 }
 
+.track-tooltips-container {
+    top: 100px;
+    width: 3%;
+    height: min-content;
+    position: relative;
+    z-index: 997;
+}
+
+.track-tooltip {
+    padding: 0px;
+    border: none;
+
+    .button.question-mark {
+        width: 12px;
+        height: 12px;
+        fill: black;
+    }
+}
+.track-tooltip:hover {
+    cursor: pointer;
+}
+
 /* Minimal Mode styles */
 .minimal_mode {
     .gosling-panel {
         overflow-y: scroll;
         overflow-x: hidden;
-    }
-
-    .track-tooltips-container {
-        top: 100px;
-        width: 3%;
-        height: 100%;
-        position: relative;
-        z-index: 997;
-    }
-
-    .track-tooltip {
-        padding: 0px;
-        border: none;
-
-        .button.question-mark {
-            width: 12px;
-            height: 12px;
-            fill: black;
-        }
-    }
-    .track-tooltip:hover {
-        cursor: pointer;
     }
 
     .sample-label {
