--- a/src/App.css
+++ b/src/App.css
@@ -854,6 +854,65 @@ a:hover {
     cursor: pointer;
 }
 
+.navigation-buttons {
+    box-sizing: border-box;
+    position: fixed;
+    z-index: 998;
+    display: flex;
+    flex-direction: column;
+    top: 63px;
+    left: 63px;
+}
+
+.navigation-button-container {
+    display: flex;
+    height: auto;
+    padding: 0px;
+}
+.navigation-button-container.split {
+    display: flex;
+    height: auto;
+    padding: 0px;
+
+    .split-left {
+        border-radius: 8px 0px 0px 8px;
+        border-right: none;
+    }
+    .split-right {
+        width: 40px;
+        border-radius: 0px 8px 8px 0px;
+        border-left: none;
+
+        .button.question-mark {
+            width: 15px;
+            margin: auto;
+            color: black;
+        }
+    }
+}
+.navigation-button {
+    box-sizing: border-box !important;
+    background-color: #f6f6f6;
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: Inter;
+    height: 40px;
+    width: 160px;
+    padding: 2px 10px;
+    border: 1px solid #d3d3d3;
+}
+
+.navigation-button:focus-visible {
+    outline-offset: -1px;
+}
+
+.navigation-button:hover:not(:disabled) {
+    background-color: #ebebeb;
+}
+.navigation-button:active:not(:disabled) {
+    background-color: #e6e4e4;
+}
+
 /* Minimal Mode styles */
 .minimal_mode {
     .gosling-panel {
@@ -867,62 +926,8 @@ a:hover {
     }
 
     .navigation-buttons {
-        box-sizing: border-box;
-        position: fixed;
-        z-index: 997;
-        display: flex;
-        flex-direction: column;
         top: 3px;
         left: 3px;
-    }
-
-    .navigation-button-container {
-        display: flex;
-        height: auto;
-        padding: 0px;
-    }
-    .navigation-button-container.split {
-        display: flex;
-        height: auto;
-        padding: 0px;
-
-        .split-left {
-            border-radius: 8px 0px 0px 8px;
-            border-right: none;
-        }
-        .split-right {
-            width: 40px;
-            border-radius: 0px 8px 8px 0px;
-            border-left: none;
-
-            .button.question-mark {
-                width: 15px;
-                margin: auto;
-                color: black;
-            }
-        }
-    }
-    .navigation-button {
-        box-sizing: border-box !important;
-        background-color: #f6f6f6;
-        cursor: pointer;
-        font-size: 1rem;
-        font-family: Inter;
-        height: 40px;
-        width: 160px;
-        padding: 2px 10px;
-        border: 1px solid #d3d3d3;
-    }
-
-    .navigation-button:focus-visible {
-        outline-offset: -1px;
-    }
-
-    .navigation-button:hover:not(:disabled) {
-        background-color: #ebebeb;
-    }
-    .navigation-button:active:not(:disabled) {
-        background-color: #e6e4e4;
     }
 
     /* Force scrollbar to show */
