--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,319 @@ a:hover {
     text-decoration: 3px underline #5bb6ea;
 }
 
+/* NavigationBar styles */
+.navigation-container {
+    box-sizing: border-box !important;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    width: 100%;
+    z-index: 999;
+    background-color: white;
+    padding: 0px 20px;
+
+    .navigation-links-container {
+        display: flex;
+        gap: 4px;
+
+        .title-github-link,
+        .title-doc-link,
+        .feedback {
+            display: flex;
+            justify-content: center;
+            background-color: transparent;
+            padding: 4px 10px;
+            border-radius: 4px;
+
+            svg {
+                height: 20px;
+                vertical-align: middle;
+                margin: auto 5px auto auto;
+                color: black;
+            }
+            span {
+                font-size: 1rem;
+            }
+        }
+
+        .title-github-link:hover,
+        .title-doc-link:hover,
+        .feedback:hover {
+            background-color: #f6f6f6;
+        }
+
+        .title-github-link {
+            position: relative;
+            text-decoration: none;
+        }
+
+        .title-doc-link {
+            color: black;
+            position: relative;
+            text-decoration: none;
+        }
+
+        .feedback {
+            display: flex;
+            justify-content: center;
+
+            a {
+                box-sizing: border-box !important;
+                display: flex;
+                font-size: 0.9rem;
+                font-family: Inter;
+                font-weight: 400;
+                text-decoration: none;
+                color: #000000;
+
+                svg.button {
+                    position: relative;
+                    height: 16px;
+                    margin: auto;
+                    margin-right: 5px;
+                    top: auto;
+                    right: auto;
+                }
+                span {
+                    margin: auto;
+                    margin-left: 0px;
+                }
+            }
+        }
+    }
+
+    .links-left {
+        display: flex;
+
+        .config-button {
+            position: relative;
+            margin: auto;
+            width: 25px;
+            height: 25px;
+            cursor: pointer;
+            z-index: 999;
+            color: black;
+            stroke: black;
+            stroke-width: 0.5px;
+        }
+        .sample-information {
+            position: relative;
+            display: flex;
+            align-items: center;
+            margin-left: 18px;
+            text-shadow: 0px 0px 6px white;
+            font-size: 18px;
+            z-index: 999;
+
+            .dimed {
+                margin-right: 12px;
+            }
+
+            small {
+                margin-left: 12px;
+                font-size: 12px;
+                color: gray;
+                margin-right: 10px;
+            }
+
+            .title-btn {
+                position: relative;
+                height: 25px;
+                width: 25px;
+                font-size: 14px;
+                margin-left: 10px;
+                cursor: pointer;
+                z-index: 999;
+                color: #333333;
+
+                svg {
+                    vertical-align: inherit;
+                }
+            }
+        }
+    }
+
+    .links-right {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+    }
+}
+
+.vis-panel {
+    .vis-overview-panel {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-right: 1px solid lightgray;
+        background-color: white;
+        overflow-y: none;
+        z-index: 999;
+        left: 0px;
+        transition: left 0.2s ease;
+
+        .navigation-container {
+            padding: 10px;
+            font-size: 18px;
+            border-bottom: 1px solid lightgray;
+            background: #f6f6f6;
+        }
+    }
+
+    .hide {
+        left: -100%;
+    }
+
+    .vis-overview-panel .gosling-component {
+        cursor: pointer;
+        pointer-events: none;
+    }
+
+    .gosling-component {
+        z-index: 1;
+    }
+
+    .vis-overview-panel .title {
+        padding: 10px;
+        font-size: 18px;
+        border-bottom: 1px solid lightgray;
+        background: #f6f6f6;
+    }
+
+    .vis-overview-panel .title small {
+        font-weight: normal;
+    }
+
+    .vis-overview-panel .button {
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        position: absolute;
+        right: 5px;
+        top: 12px;
+    }
+
+    .vis-overview-panel .config {
+        min-height: 100px;
+        background: #f6f6f6;
+        border-top: 1px solid lightgray;
+        position: relative;
+        padding: 30px;
+    }
+
+    .vis-overview-panel .config .button {
+        font-size: 14px;
+        height: 30px;
+        width: calc(100% - 20px);
+        text-align: center;
+        line-height: 30px;
+        border: 1px solid black;
+        border-radius: 3px;
+        background: white;
+        cursor: pointer;
+        left: 10px;
+    }
+
+    .vis-overview-panel .overview-container {
+        display: flex;
+        flex-wrap: wrap;
+        height: calc(100% - 41px - 20px);
+        padding: 20px;
+        gap: 20px;
+        overflow-y: auto;
+    }
+
+    .overview-root {
+        margin-top: 50px;
+        gap: 0px;
+        height: calc(100% - 50px);
+    }
+
+    .overview-container {
+        width: calc(100% - 400px - 40px);
+        float: left;
+    }
+
+    .overview-status {
+        background: rgba(210, 210, 210, 0.1);
+        width: calc(100% - 400px);
+        height: 25px;
+        float: left;
+        border-bottom: 1px solid lightgrey;
+        padding: 0px;
+        margin: 0px;
+        color: grey;
+        align-content: middle;
+        display: flex;
+        justify-content: center;
+    }
+
+    .overview-left {
+        float: left;
+        height: 100%;
+        width: 398px;
+        border-right: 1px solid lightgrey;
+        overflow-y: auto;
+        overflow-x: hidden;
+        background: rgba(210, 210, 210, 0.1);
+    }
+
+    .vis-overview-panel table {
+        width: 100%;
+        border-spacing: 0px 0px;
+        border-collapse: collapse;
+    }
+
+    .vis-overview-panel tr /* :nth-child(even) */ {
+        border-top: 1px solid lightgray;
+    }
+
+    .vis-overview-panel td {
+        border-radius: 0px;
+        padding-left: 90px !important;
+    }
+
+    .vis-overview-panel .overview-title {
+        position: absolute;
+        left: -10px;
+        top: 120px;
+        transform: rotate(-90deg);
+        font-weight: bold;
+        font-size: 18px;
+        text-shadow: 0px 0px 12px #f6f6f6;
+    }
+
+    .overview-container > div {
+        padding: 4px;
+    }
+
+    .vis-overview-panel .selected-overview,
+    .vis-overview-panel .unselected-overview {
+        display: block;
+        text-align: center;
+        flex: 1;
+    }
+
+    .vis-overview-panel .selected-overview {
+        box-shadow: inset 0px 0px 0px 2px #2e94ff;
+    }
+
+    .vis-overview-panel .unselected-overview {
+        cursor: pointer;
+    }
+
+    .vis-overview-panel .unselected-overview:hover {
+        box-shadow: inset 0px 0px 0px 2px lightgray;
+    }
+
+    .vis-overview-panel td {
+        padding: 20px;
+    }
+}
+
 .chromoscope-title {
     font-weight: bold;
-    margin-right: 4px;
     text-decoration: none;
 }
 .dimed {
@@ -131,35 +441,12 @@ a:hover {
     border: none;
 }
 
-.title-github-link {
-    display: inline-block;
-    position: fixed;
-    right: 200px;
-    text-decoration: none;
-}
-
-.title-doc-link {
-    color: black;
-    display: inline-block;
-    position: fixed;
-    right: 20px;
-    text-decoration: none;
-}
-
 .title-about-link {
     margin: auto 12px;
     font-size: 12px;
     cursor: pointer;
     color: black;
     text-decoration: none;
-}
-
-.title-github-link svg,
-.title-doc-link svg {
-    height: 25px;
-    vertical-align: middle;
-    padding-right: 8px;
-    color: black;
 }
 
 .title-about-link svg {
@@ -285,7 +572,14 @@ a:hover {
 .zoom-out-button:hover,
 .zoom-left-button:hover,
 .zoom-right-button:hover {
-    background: lightgrey;
+    background: #ebebeb;
+}
+
+.zoom-in-button:active,
+.zoom-out-button:active,
+.zoom-left-button:active,
+.zoom-right-button:active {
+    background: #e6e4e4;
 }
 
 .gene-search {
@@ -343,23 +637,6 @@ a:hover {
 .vis-panel {
     height: 100%;
     width: 100%;
-}
-
-.title-btn {
-    font-size: 14px;
-    margin-left: 10px;
-    text-align: center;
-    line-height: 30px;
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-    z-index: 999;
-    color: #333333;
-
-    svg {
-        vertical-align: inherit;
-    }
 }
 
 .tag-parent {
@@ -454,18 +731,6 @@ a:hover {
     /* color: black; */
 }
 
-.config-button {
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    cursor: pointer;
-    z-index: 999;
-    stroke: black;
-    stroke-width: 0.5px;
-}
-
 .jump-to-bp-btn {
     font-weight: bold;
     color: black;
@@ -524,17 +789,6 @@ a:hover {
     line-height: 20px;
 }
 
-.sample-label {
-    position: absolute;
-    top: 12px;
-    left: 40px;
-    text-shadow: 0px 0px 6px white;
-    font-size: 18px;
-    z-index: 999;
-    line-height: normal;
-    /* background: #ffffff99; */
-}
-
 .menu-title svg {
     vertical-align: middle;
 }
@@ -553,168 +807,6 @@ a:hover {
     z-index: 999;
     color: gray;
     background: #ffffff99;
-}
-
-.vis-overview-panel {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-right: 1px solid lightgray;
-    background-color: white;
-    /* box-shadow: 0px 0px 12px #00000032; */
-    overflow-y: none;
-    z-index: 999;
-    left: 0px;
-    transition: left 0.2s ease;
-}
-
-.hide {
-    left: -100%;
-}
-
-.vis-overview-panel .gosling-component {
-    cursor: pointer;
-    pointer-events: none;
-}
-
-.gosling-component {
-    z-index: 1;
-}
-
-.vis-overview-panel .title {
-    padding: 10px;
-    font-size: 18px;
-    border-bottom: 1px solid lightgray;
-    background: #f6f6f6;
-}
-
-.vis-overview-panel .title small {
-    font-weight: normal;
-}
-
-.vis-overview-panel .button {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    position: absolute;
-    right: 5px;
-    top: 12px;
-}
-
-.vis-overview-panel .config {
-    min-height: 100px;
-    background: #f6f6f6;
-    border-top: 1px solid lightgray;
-    position: relative;
-    padding: 30px;
-}
-
-.vis-overview-panel .config .button {
-    font-size: 14px;
-    height: 30px;
-    width: calc(100% - 20px);
-    text-align: center;
-    line-height: 30px;
-    border: 1px solid black;
-    border-radius: 3px;
-    background: white;
-    cursor: pointer;
-    left: 10px;
-}
-
-.vis-overview-panel .overview-container {
-    display: flex;
-    flex-wrap: wrap;
-    height: calc(100% - 41px - 20px);
-    padding: 20px;
-    gap: 20px;
-    overflow-y: auto;
-}
-
-.overview-root {
-    gap: 0px;
-    height: calc(100% - 50px);
-}
-
-.overview-container {
-    width: calc(100% - 400px - 40px);
-    float: left;
-}
-
-.overview-status {
-    background: rgba(210, 210, 210, 0.1);
-    width: calc(100% - 400px);
-    height: 25px;
-    float: left;
-    border-bottom: 1px solid lightgrey;
-    padding: 0px;
-    margin: 0px;
-    color: grey;
-    align-content: middle;
-    display: flex;
-    justify-content: center;
-}
-
-.overview-left {
-    float: left;
-    height: 100%;
-    width: 398px;
-    border-right: 1px solid lightgrey;
-    overflow-y: auto;
-    overflow-x: hidden;
-    background: rgba(210, 210, 210, 0.1);
-}
-
-.vis-overview-panel table {
-    width: 100%;
-    border-spacing: 0px 0px;
-    border-collapse: collapse;
-}
-
-.vis-overview-panel tr /* :nth-child(even) */ {
-    border-top: 1px solid lightgray;
-}
-
-.vis-overview-panel td {
-    border-radius: 0px;
-    padding-left: 90px !important;
-}
-
-.vis-overview-panel .overview-title {
-    position: absolute;
-    left: -10px;
-    top: 120px;
-    transform: rotate(-90deg);
-    font-weight: bold;
-    font-size: 18px;
-    text-shadow: 0px 0px 12px #f6f6f6;
-}
-
-.overview-container > div {
-    padding: 4px;
-}
-
-.vis-overview-panel .selected-overview,
-.vis-overview-panel .unselected-overview {
-    display: block;
-    text-align: center;
-    flex: 1;
-}
-
-.vis-overview-panel .selected-overview {
-    box-shadow: inset 0px 0px 0px 2px #2e94ff;
-}
-
-.vis-overview-panel .unselected-overview {
-    cursor: pointer;
-}
-
-.vis-overview-panel .unselected-overview:hover {
-    box-shadow: inset 0px 0px 0px 2px lightgray;
-}
-
-.vis-overview-panel td {
-    padding: 20px;
 }
 
 .gosling-panel {
@@ -907,6 +999,7 @@ a:hover {
     margin-top: 4px;
 }
 
+.navigation-button:focus,
 .navigation-button:focus-visible {
     outline-offset: -1px;
 }
@@ -994,6 +1087,8 @@ a:hover {
 
             .open-in-chromoscope-link:hover {
                 text-decoration: none;
+                cursor: pointer;
+                background-color: #ebebeb;
             }
 
             .open-in-chromoscope-link:active {
@@ -1011,7 +1106,6 @@ a:hover {
 
                     .export-dropdown {
                         height: auto;
-                        /* background-color: #f6f6f6; */
                         right: 0px;
                         border-radius: 8px;
                         transition: all 100ms;
@@ -1020,6 +1114,7 @@ a:hover {
                         .export-button {
                             position: relative;
                             box-sizing: border-box !important;
+                            background-color: #f6f6f6;
                             width: 120px;
                             height: 35px;
                             border: 1px solid #d3d3d3;
@@ -1072,6 +1167,7 @@ a:hover {
                                 width: 25px;
                                 height: 25px;
                                 margin-left: 0px;
+                                color: black;
                             }
 
                             .title-btn.png {
@@ -1080,8 +1176,9 @@ a:hover {
                                 background-color: transparent;
                             }
 
+                            svg.button:focus,
                             svg.button:focus-visible {
-                                outline-offset: 3px;
+                                outline-offset: 6px;
                             }
                         }
                     }
@@ -1093,6 +1190,18 @@ a:hover {
 
                         .export-button {
                             border: none;
+                            background-color: #ebebeb;
+                        }
+                    }
+
+                    .export-dropdown.closed {
+                        .export-button:hover {
+                            cursor: pointer;
+                            background-color: #ebebeb;
+                        }
+
+                        .export-button:active {
+                            background-color: #e6e4e4;
                         }
                     }
                 }
