--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,7 @@
+/* Import component-level CSS files */
+@import url('./NavigationBar.css');
+
+/* Overwrite Bootstrap's default box-sizing */
 *,
 *::before,
 *::after {
@@ -40,11 +44,200 @@ a:hover {
     text-decoration: 3px underline #5bb6ea;
 }
 
+
+.vis-panel {
+    .vis-overview-panel {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-right: 1px solid lightgray;
+        background-color: white;
+        overflow-y: none;
+        z-index: 999;
+        left: 0px;
+        transition-property: left, display;
+        transition-duration: 0.2s;
+        transition-timing-function: ease;
+        transition-behavior: allow-discrete;
+
+        .navigation-container {
+            display: flex;
+            align-items: center;
+            padding: 0px 20px;
+            font-size: 18px;
+            border-bottom: 1px solid lightgray;
+            background: #f6f6f6;
+
+        
+            .config-button {
+                svg {
+                    vertical-align: unset;
+                }
+            }
+            .config-button:hover {
+                background-color: #eaeaea;
+            }
+            .config-button:active {
+                background-color: #e3e3e3;
+            }
+
+            .title-github-link:hover,
+            .title-doc-link:hover,
+            .feedback a:hover {
+                background-color: #eaeaea;
+            }
+            
+            .title-github-link:active,
+            .title-doc-link:active,
+            .feedback a:active {
+                background-color: #e3e3e3;
+            }
+        }
+    }
+
+    .hide {
+        left: -100%;
+        display: none;
+    }
+
+    .vis-overview-panel .gosling-component {
+        cursor: pointer;
+        pointer-events: none;
+    }
+
+    .gosling-component {
+        z-index: 1;
+    }
+
+    .vis-overview-panel .title {
+        padding: 10px;
+        font-size: 18px;
+        border-bottom: 1px solid lightgray;
+        background: #f6f6f6;
+    }
+
+    .vis-overview-panel .title small {
+        font-weight: normal;
+    }
+
+    .vis-overview-panel .button {
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        position: absolute;
+        right: 5px;
+        top: 12px;
+    }
+
+
+    .vis-overview-panel .overview-container {
+        display: flex;
+        flex-wrap: wrap;
+        height: calc(100% - 41px - 20px);
+        padding: 20px;
+        gap: 20px;
+        overflow-y: auto;
+    }
+
+    .overview-root {
+        margin-top: 50px;
+        gap: 0px;
+        height: calc(100% - 50px);
+    }
+
+    .overview-container {
+        width: calc(100% - 400px - 40px);
+        float: left;
+    }
+
+    .overview-status {
+        background: rgba(210, 210, 210, 0.1);
+        width: calc(100% - 400px);
+        height: 25px;
+        float: left;
+        border-bottom: 1px solid lightgrey;
+        padding: 0px;
+        margin: 0px;
+        color: grey;
+        align-content: middle;
+        display: flex;
+        justify-content: center;
+    }
+
+    .overview-left {
+        float: left;
+        height: 100%;
+        width: 398px;
+        border-right: 1px solid lightgrey;
+        overflow-y: auto;
+        overflow-x: hidden;
+        background: rgba(210, 210, 210, 0.1);
+    }
+
+    .vis-overview-panel table {
+        width: 100%;
+        border-spacing: 0px 0px;
+        border-collapse: collapse;
+    }
+
+    .vis-overview-panel tr /* :nth-child(even) */ {
+        border-top: 1px solid lightgray;
+    }
+
+    .vis-overview-panel td {
+        border-radius: 0px;
+        padding-left: 90px !important;
+    }
+
+    .vis-overview-panel .overview-title {
+        position: absolute;
+        left: -10px;
+        top: 120px;
+        transform: rotate(-90deg);
+        font-weight: bold;
+        font-size: 18px;
+        text-shadow: 0px 0px 12px #f6f6f6;
+    }
+
+    .overview-container > div {
+        padding: 4px;
+    }
+
+    .vis-overview-panel .selected-overview,
+    .vis-overview-panel .unselected-overview {
+        display: block;
+        text-align: center;
+        flex: 1;
+    }
+
+    .vis-overview-panel .selected-overview {
+        box-shadow: inset 0px 0px 0px 2px #2e94ff;
+    }
+
+    .vis-overview-panel .unselected-overview {
+        cursor: pointer;
+    }
+
+    .vis-overview-panel .unselected-overview:hover {
+        box-shadow: inset 0px 0px 0px 2px lightgray;
+    }
+
+    .vis-overview-panel td {
+        padding: 20px;
+    }
+}
+
 .chromoscope-title {
     font-weight: bold;
-    margin-right: 4px;
     text-decoration: none;
+    padding: 5px;
+    cursor: pointer;
 }
+
+.chromoscope-title:focus, .chromoscope-title:focus-visible {
+    /* padding: 5px; */
+}
+
 .dimed {
     color: lightgrey;
 }
@@ -131,40 +324,18 @@ a:hover {
     border: none;
 }
 
-.title-github-link {
-    display: inline-block;
-    position: fixed;
-    right: 200px;
-    text-decoration: none;
-}
-
-.title-doc-link {
-    color: black;
-    display: inline-block;
-    position: fixed;
-    right: 20px;
-    text-decoration: none;
-}
-
 .title-about-link {
     margin: auto 12px;
     font-size: 12px;
     cursor: pointer;
     color: black;
     text-decoration: none;
-}
-
-.title-github-link svg,
-.title-doc-link svg {
-    height: 25px;
-    vertical-align: middle;
-    padding-right: 8px;
-    color: black;
+    padding: 6px;
 }
 
 .title-about-link svg {
     height: 16px;
-    padding-right: 4px;
+    padding: 4px 4px 4px 0px;
     vertical-align: middle;
     color: black;
 }
@@ -285,7 +456,14 @@ a:hover {
 .zoom-out-button:hover,
 .zoom-left-button:hover,
 .zoom-right-button:hover {
-    background: lightgrey;
+    background: #ebebeb;
+}
+
+.zoom-in-button:active,
+.zoom-out-button:active,
+.zoom-left-button:active,
+.zoom-right-button:active {
+    background: #e6e4e4;
 }
 
 .gene-search {
@@ -343,23 +521,6 @@ a:hover {
 .vis-panel {
     height: 100%;
     width: 100%;
-}
-
-.title-btn {
-    font-size: 14px;
-    margin-left: 10px;
-    text-align: center;
-    line-height: 30px;
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-    z-index: 999;
-    color: #333333;
-
-    svg {
-        vertical-align: inherit;
-    }
 }
 
 .tag-parent {
@@ -454,18 +615,6 @@ a:hover {
     /* color: black; */
 }
 
-.config-button {
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    cursor: pointer;
-    z-index: 999;
-    stroke: black;
-    stroke-width: 0.5px;
-}
-
 .jump-to-bp-btn {
     font-weight: bold;
     color: black;
@@ -524,17 +673,6 @@ a:hover {
     line-height: 20px;
 }
 
-.sample-label {
-    position: absolute;
-    top: 12px;
-    left: 40px;
-    text-shadow: 0px 0px 6px white;
-    font-size: 18px;
-    z-index: 999;
-    line-height: normal;
-    /* background: #ffffff99; */
-}
-
 .menu-title svg {
     vertical-align: middle;
 }
@@ -553,168 +691,6 @@ a:hover {
     z-index: 999;
     color: gray;
     background: #ffffff99;
-}
-
-.vis-overview-panel {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-right: 1px solid lightgray;
-    background-color: white;
-    /* box-shadow: 0px 0px 12px #00000032; */
-    overflow-y: none;
-    z-index: 999;
-    left: 0px;
-    transition: left 0.2s ease;
-}
-
-.hide {
-    left: -100%;
-}
-
-.vis-overview-panel .gosling-component {
-    cursor: pointer;
-    pointer-events: none;
-}
-
-.gosling-component {
-    z-index: 1;
-}
-
-.vis-overview-panel .title {
-    padding: 10px;
-    font-size: 18px;
-    border-bottom: 1px solid lightgray;
-    background: #f6f6f6;
-}
-
-.vis-overview-panel .title small {
-    font-weight: normal;
-}
-
-.vis-overview-panel .button {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    position: absolute;
-    right: 5px;
-    top: 12px;
-}
-
-.vis-overview-panel .config {
-    min-height: 100px;
-    background: #f6f6f6;
-    border-top: 1px solid lightgray;
-    position: relative;
-    padding: 30px;
-}
-
-.vis-overview-panel .config .button {
-    font-size: 14px;
-    height: 30px;
-    width: calc(100% - 20px);
-    text-align: center;
-    line-height: 30px;
-    border: 1px solid black;
-    border-radius: 3px;
-    background: white;
-    cursor: pointer;
-    left: 10px;
-}
-
-.vis-overview-panel .overview-container {
-    display: flex;
-    flex-wrap: wrap;
-    height: calc(100% - 41px - 20px);
-    padding: 20px;
-    gap: 20px;
-    overflow-y: auto;
-}
-
-.overview-root {
-    gap: 0px;
-    height: calc(100% - 50px);
-}
-
-.overview-container {
-    width: calc(100% - 400px - 40px);
-    float: left;
-}
-
-.overview-status {
-    background: rgba(210, 210, 210, 0.1);
-    width: calc(100% - 400px);
-    height: 25px;
-    float: left;
-    border-bottom: 1px solid lightgrey;
-    padding: 0px;
-    margin: 0px;
-    color: grey;
-    align-content: middle;
-    display: flex;
-    justify-content: center;
-}
-
-.overview-left {
-    float: left;
-    height: 100%;
-    width: 398px;
-    border-right: 1px solid lightgrey;
-    overflow-y: auto;
-    overflow-x: hidden;
-    background: rgba(210, 210, 210, 0.1);
-}
-
-.vis-overview-panel table {
-    width: 100%;
-    border-spacing: 0px 0px;
-    border-collapse: collapse;
-}
-
-.vis-overview-panel tr /* :nth-child(even) */ {
-    border-top: 1px solid lightgray;
-}
-
-.vis-overview-panel td {
-    border-radius: 0px;
-    padding-left: 90px !important;
-}
-
-.vis-overview-panel .overview-title {
-    position: absolute;
-    left: -10px;
-    top: 120px;
-    transform: rotate(-90deg);
-    font-weight: bold;
-    font-size: 18px;
-    text-shadow: 0px 0px 12px #f6f6f6;
-}
-
-.overview-container > div {
-    padding: 4px;
-}
-
-.vis-overview-panel .selected-overview,
-.vis-overview-panel .unselected-overview {
-    display: block;
-    text-align: center;
-    flex: 1;
-}
-
-.vis-overview-panel .selected-overview {
-    box-shadow: inset 0px 0px 0px 2px #2e94ff;
-}
-
-.vis-overview-panel .unselected-overview {
-    cursor: pointer;
-}
-
-.vis-overview-panel .unselected-overview:hover {
-    box-shadow: inset 0px 0px 0px 2px lightgray;
-}
-
-.vis-overview-panel td {
-    padding: 20px;
 }
 
 .gosling-panel {
@@ -841,6 +817,7 @@ a:hover {
 }
 
 .track-tooltip {
+    display: flex;
     padding: 0px;
     border: none;
 
@@ -852,6 +829,9 @@ a:hover {
 }
 .track-tooltip:hover {
     cursor: pointer;
+}
+.track-tooltip:focus, .track-tooltip:focus-visible {
+    outline-offset: 2px;
 }
 
 .navigation-buttons {
@@ -907,6 +887,7 @@ a:hover {
     margin-top: 4px;
 }
 
+.navigation-button:focus,
 .navigation-button:focus-visible {
     outline-offset: -1px;
 }
@@ -1002,89 +983,154 @@ a:hover {
                 background-color: #e6e4e4;
             }
 
-            .export-links {
-                border-radius: 4px;
-                margin-top: 4px;
+            .button-group {
+                display: flex;
+                gap: 4px;
 
-                .export-dropdown {
-                    height: auto;
-                    background-color: #f6f6f6;
-                    right: 0px;
-                    border-radius: 8px;
-                    border: 1px solid #d3d3d3;
-                    transition: all 100ms;
-                    overflow: hidden;
+                .export-links {
+                    position: relative;
+                    border-radius: 4px;
+                    margin-top: 4px;
 
-                    .export-button {
-                        box-sizing: border-box !important;
-                        width: 210px;
-                        height: 35px;
-                        border-radius: inherit;
-                        border: 0px solid;
-                        font-weight: 400;
-                        background-color: transparent;
+                    .export-dropdown {
+                        height: auto;
+                        right: 0px;
+                        border-radius: 8px;
+                        transition: all 100ms;
+                        overflow: hidden;
 
-                        .export-title {
-                            font-size: 0.9rem;
-                            font-family: Inter;
-                        }
-
-                        .button.triangle-down {
-                            width: 11px;
-                            height: 7px;
-                            margin-left: 8px;
-                        }
-                    }
-
-                    .export-button:hover {
-                        cursor: pointer;
-                        background-color: #ebebeb;
-                    }
-
-                    .export-button:active {
-                        background-color: #e6e4e4;
-                    }
-
-                    .nav-list {
-                        list-style-type: none;
-                        padding: 0px 10px;
-                        display: flex;
-                        flex-direction: row;
-                        height: 50px;
-                        background-color: white;
-                        margin: 0px 8px 8px 8px;
-                        border-radius: 3px;
-
-                        .nav-list-item {
-                            display: flex;
-                            margin: auto;
-                        }
-
-                        .title-btn {
-                            display: flex;
+                        .export-button {
                             position: relative;
-                            width: 25px;
-                            height: 25px;
-                            margin-left: 0px;
+                            box-sizing: border-box !important;
+                            background-color: #f6f6f6;
+                            width: 120px;
+                            height: 35px;
+                            border: 1px solid #d3d3d3;
+                            border-radius: inherit;
+                            font-weight: 400;
+
+                            .export-title {
+                                font-size: 0.9rem;
+                                font-family: Inter;
+                            }
+
+                            .button.triangle-down {
+                                width: 11px;
+                                height: 7px;
+                                margin-left: 8px;
+                            }
                         }
 
-                        .title-btn.png {
+                        .nav-list {
+                            list-style-type: none;
                             padding: 0px;
+                            display: flex;
+                            flex-direction: row;
+                            height: 50px;
+                            background-color: white;
+                            border: 1px solid rgb(221, 221, 221);
+                            margin: 0px;
+                            border-radius: 10px;
+                            width: 150px;
+                            position: absolute;
+                            /* left: 50%; */
+                            /* transform: translate(-50%, 0px); */
+                            top: 105%;
+
+                            .nav-list-item {
+                                display: flex;
+                                margin: auto;
+                            }
+
+                            .nav-list-item:hover {
+                                cursor: pointer;
+                                background-color: #f4f4f4;
+                                border-radius: 5px;
+                            }
+
+                            .title-btn {
+                                display: flex;
+                                position: relative;
+                                width: 25px;
+                                height: 25px;
+                                margin-left: 0px;
+                                color: black;
+                                padding: 6px;
+                            }
+
+                            .title-btn.png {
+                                border: none;
+                                background-color: transparent;
+                            }
+
+                            svg.button:focus,
+                            svg.button:focus-visible {
+                                outline-offset: 0px;
+                            }
+                        }
+                    }
+
+                    .export-dropdown.open {
+                        background-color: #f9f9f9;
+                        border-radius: 8px;
+                        transition: all 100ms;
+
+                        .export-button {
                             border: none;
-                            background-color: transparent;
+                            background-color: #ebebeb;
+                        }
+                    }
+
+                    .export-dropdown.closed {
+                        .export-button:hover {
+                            cursor: pointer;
+                            background-color: #ebebeb;
+                        }
+
+                        .export-button:active {
+                            background-color: #e6e4e4;
                         }
                     }
                 }
 
-                .export-dropdown.open {
-                    background-color: #ebebeb;
-                    border-radius: 8px;
-                    border: 1px solid #c3c3c3;
-                    transition: all 100ms;
+                .feedback {
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 4px;
 
-                    .export-button {
-                        border: none;
+                    a {
+                        box-sizing: border-box !important;
+                        display: flex;
+                        background-color: #f6f6f6;
+                        font-size: 0.9rem;
+                        font-family: Inter;
+                        font-weight: 400;
+                        width: 120px;
+                        height: 35px;
+                        border-radius: 8px;
+                        padding: 1px 6px;
+                        border: 1px solid #d3d3d3;
+                        text-decoration: none;
+                        color: #000000;
+
+                        svg {
+                            width: 12px;
+                            margin: auto;
+                            margin-right: 8px;
+                        }
+                        span {
+                            margin: auto;
+                            margin-left: 0px;
+                        }
                     }
+                }
+
+                .link-button:hover {
+                    cursor: pointer;
+                    background-color: #ebebeb;
+                }
+                .link-button:active {
+                    background-color: #e6e4e4;
                 }
             }
         }
