--- a/src/css/NavigationBar.css
+++ b/src/css/NavigationBar.css
@@ -117,7 +117,7 @@
             border-radius: 4px;
             background-color: transparent;
         }
-        
+
         .config-button:hover {
             background-color: #f6f6f6;
         }
@@ -125,7 +125,8 @@
             background-color: #e6e4e4;
         }
 
-        .config-button:focus-visible, .config-button:focus {
+        .config-button:focus-visible,
+        .config-button:focus {
             outline-offset: 0px;
         }
 
@@ -198,7 +199,7 @@
                     border: none;
                     background-color: transparent;
                 }
-                
+
                 .title-btn.clipboard {
                     border: none;
                     background-color: transparent;
